Add two more categories

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,5 +13,8 @@
   "errorSolution": "Try to come to the site later",
   "goToMainPage": "Go to the main page",
   "pageNotFoundSrc": "img/page-not-found-en.png",
-  "notFoundPage": "Not found page"
+  "notFoundPage": "Not found page",
+  "nowPlaying": "Now playing",
+  "popular": "Popular",
+  "topRated": "Top rated"
 }
