--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,5 +16,7 @@
   "notFoundPage": "Страница не найдена",
   "nowPlaying": "В кинотеатрах",
   "popular": "Популярные",
-  "topRated": "По рейтингу"
+  "topRated": "По рейтингу",
+  "search": "Поиск",
+  "typeMovieTitle": "Введите название фильма"
 }
