Add actors photos to Details component

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -18,5 +18,6 @@
   "popular": "Popular",
   "topRated": "Top rated",
   "search": "Search",
-  "typeMovieTitle": "Type a movie title"
+  "typeMovieTitle": "Type a movie title",
+  "actors": "Actors"
 }
